--- a/BPMMobile/Pages/98JSHYJY/FlowCreate.html
+++ b/BPMMobile/Pages/98JSHYJY/FlowCreate.html
@@ -169,7 +169,7 @@
 
         mui.ready(function () {
             getBPMParam();
-            getVersion('\\01威高集团总部\\06建设公司\\建设管理平台', '建设公司会议纪要申请');
+            getVersion('\\99业务平台\\07建设公司\\行政办公', '建设公司会议纪要申请');
             prepMsg();
             upload();
             watch();
