--- a/BPMMobile/Pages/07FangDiChan/02ShangGuan/BG0702020/FlowUndoDetail.html
+++ b/BPMMobile/Pages/07FangDiChan/02ShangGuan/BG0702020/FlowUndoDetail.html
@@ -632,23 +632,28 @@
 
                 }
                 var NodeName;
+                var ShareNode;
                 //判断流程本节点是否结束，处理者是否为当前用户,
                 //流程步骤是否是传过来的流程步骤，再根据这三项查出对应的节点名称
                 for (var i = 0; i < data.Steps.length; i++) {
                     //debugger;
 
-                    if (data.Steps[i].Finished == false && data.Steps[i].RecipientAccount == ($('#myPhone').val())) {
-
+                    if (data.Steps[i].Finished == false) {
 
                         if (stepId.indexOf(data.Steps[i].StepID) != -1) {
 
                             NodeName = data.Steps[i].NodeName;
-
+                            if (data.Steps[i].Share && !data.Steps[i].OwnerAccount) {
+                                ShareNode = '流程被共享';
+                            } else if (data.Steps[i].Share && data.Steps[i].OwnerAccount) {
+                                ShareNode = '流程被取出';
+                            }
                         }
 
                     }
 
                 }
+                
                 $("#nodeName").val(NodeName);
                 if (NodeName == "开始") {
                     $("#createD").css("display", "block");
@@ -703,6 +708,20 @@
                         }
                     }
                 }
+                if (ShareNode == '流程被共享') {
+                    $("#approvalD").empty();
+                    var li = '';
+                    li = li + '    &nbsp;&nbsp;';
+                    li = li + '   <button class="mui-btn mui-btn-green roundbt" type="button" style="width:100%" id="pickupbt" onclick="PickupShareTaskExt()">从共享任务中取出</button>';
+                    $("#approvalD").append(li);
+
+                } else if (ShareNode == '流程被取出') {
+                    var li = '';
+                    li = li + '    &nbsp;&nbsp;';
+                    li = li + '   <button class="mui-btn mui-btn-green roundbt" type="button" style="width:100%" id="pickbackbt" onclick="PutbackShareTaskExt()">放回共享任务</button>';
+                    $("#approvalD").append(li);
+
+                }r
             }).fail(function (e) {
 
             })
