调整部分内容

--- a/BPMMobile/Pages/07FangDiChan/02ShangGuan/BG0702035/FlowCreate.html
+++ b/BPMMobile/Pages/07FangDiChan/02ShangGuan/BG0702035/FlowCreate.html
@@ -82,7 +82,7 @@
         mui.init();
 
         mui.ready(function () {
-            getVersion('\\07房地产集团\\02商管公司\\BG办公管理', 'BG0702035_商管公司激励申请_流程');
+            getVersion('\\99业务平台\\09盛祥商管', '盛祥商管公司员工奖惩申请');
             prepMsg();
             upload();
             watch();
