--- a/BPMMobile/Pages/98SGMonthlyFlow/FlowCreate.html
+++ b/BPMMobile/Pages/98SGMonthlyFlow/FlowCreate.html
@@ -108,7 +108,7 @@
         mui.init();
 
         mui.ready(function () {
-            getVersion('\\98门户', '商管月工作汇报_流程');
+            getVersion('\\99业务平台\\09盛祥商管', '盛祥商管公司月工作汇报');
             getBPMParam();
             prepMsg();
             upload();
