--- a/BPMMobile/Pages/98SGWeeklyFlow/FlowCreate.html
+++ b/BPMMobile/Pages/98SGWeeklyFlow/FlowCreate.html
@@ -111,7 +111,7 @@
         mui.init();
 
         mui.ready(function () {
-            getVersion('\\98门户', '商管周工作汇报_流程');
+            getVersion('\\99业务平台\\09盛祥商管', '盛祥商管公司周工作汇报');
             getBPMParam();
             prepMsg();
             upload();
