--- a/BPMMobile/Pages/OtherExpense/FlowCreate.html
+++ b/BPMMobile/Pages/OtherExpense/FlowCreate.html
@@ -300,7 +300,7 @@
         mui.init();
 
         mui.ready(function () {
-            getVersion('\\94制品在线费用报销\\市场费用报销', '制品集团其他费用报销');
+            getVersion('\\99业务平台\\11制品费用', '制品集团其他费用报销');
             getMsg();
             upload();
             watch();
