--- a/BPMMobile/Pages/SpeciallyExpense/FlowCreate.html
+++ b/BPMMobile/Pages/SpeciallyExpense/FlowCreate.html
@@ -205,7 +205,7 @@
                 mui.init();
 
                 mui.ready(function () {
-                    getVersion('\\94制品在线费用报销\\市场费用报销', '制品公司费用标准特批');
+                    getVersion('\\99业务平台\\11制品费用', '制品公司费用标准特批');
                     getMsg();
                     upload();
                     watch();
