--- a/BPMMobile/Pages/TravelExpenses/FlowCreate.html
+++ b/BPMMobile/Pages/TravelExpenses/FlowCreate.html
@@ -620,7 +620,7 @@
             initMsg();
             upload();
             watch();
-            getVersion('\\94制品在线费用报销\\市场费用报销', '市场差旅费用报销单');
+            getVersion('\\99业务平台\\11制品费用', '市场差旅费用报销单');
          
         });
         mui('body').on('shown', '.mui-popover', function (e) {
