--- a/BPMMobile/Pages/BaseFlow/FlowCreate.html
+++ b/BPMMobile/Pages/BaseFlow/FlowCreate.html
@@ -79,7 +79,7 @@
 
 
         mui.ready(function () {
-            getVersion('\\01威高集团总部\\00威高集团本部\\XX信息管理','洁瑞APP审批');
+            getVersion('\\98开发专用','洁瑞APP审批');
             $('#flowTime').val(getNowFormatDate(1));
             upload();
             watch();
