--- a/BPMMobile/Pages/DoneFlow.html
+++ b/BPMMobile/Pages/DoneFlow.html
@@ -212,7 +212,7 @@
 
         function refresh() {
             history.go(0);
-           //mui('#refreshContainer').pullRefresh().endPulldown();
+           mui('#refreshContainer').pullRefresh().endPulldown();
         }
 
         function FormatterTime(time) {
