--- a/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/CW0103001/FlowCreate.html
+++ b/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/CW0103001/FlowCreate.html
@@ -18,10 +18,90 @@
 <body>
     <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
         <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
-           <div class="mui-input-row">
-               <label for=""></label>
-           </div>
+            <div class="mui-input-row">
+               <label for="fname">借款人<i style="color:red;">*</i></label>
+               <input type="text" id="fname" name="fname" readonly/>
+            </div>
+            <div class="mui-input-row">
+               <label for="fdept">所属部门<i style="color:red;">*</i></label> 
+               <input type="text" id="fdept" name="fdept" readonly/>
+            </div>
+            <div class="mui-input-row">
+                <label for="fdate">日期<i style="color:red;">*</i></label>
+                <input type="date" id="fdate" name="fdate" />
+            </div>
+            <div class="mui-input-row">
+                <label for="fjklx">借款类型<i style="color:red;">*</i></label>
+                <input type="text" id="fjklx" name="fjklx" readonly placeholder="请选择借款类型"/>
+            </div>
+            <div class="mui-input-row" style="height:auto;">
+                <label for="fjkyt">借款用途<i style="color:red;">*</i></label>
+                <textarea rows="5" id="fjkyt" name="fjkyt" placeholder="请填写借款用途"></textarea>
+            </div>
+            <div class="mui-input-row">
+                <label for="fjhhksj">计划还款时间<i style="color:red;">*</i></label>
+                <input type="date" id="fjhhksj" name="fjhhksj" />
+            </div>
+            <div class="mui-input-row">
+                <label for="fjkfs">借款方式<i style="color:red;">*</i></label>
+                <input type="text" id="fjkfs" name="fjkfs" readonly placeholder="请选择借款方式"/>
+            </div>
+            <div class="mui-input-row">
+                <label for="fxj">现金(元)<i style="color:red;">*</i></label>
+                <input type="number" id="fxj" name="fxj" placeholder="请填写现金"/>
+            </div>
+            <div class="mui-input-row">
+                <label for="fyhzz">银行转账(元)<i style="color:red;">*</i></label>
+                <input type="number" id="fyhzz" name="fyhzz" placeholder="请填写银行转账"/>
+            </div>
+            <div class="mui-input-row">
+                <label for="fkhhjhm">开户行及户名<i style="color:red;">*</i></label>
+                <input type="text" id="fkhhjhm" name="fkhhjhm" placeholder="请填写开户行及户名"/>
+            </div>
+            <div class="mui-input-row">
+                <label for="fzh">账户<i style="color:red;">*</i></label>
+                <input type="text" id="fzh" name="fzh" placeholder="请填写账号"/>
+            </div>
+            <div class="mui-input-row">
+                <label for="fjktotal">借款总金额(小写)<i style="color:red;">*</i></label>
+                <input type="number" id="fjktotal" name="fjktotal" readonly/>
+            </div>
+            <div class="mui-input-row">
+                <label for="fjktotal_dx">借款总金额(大写)<i style="color:red;">*</i></label>
+                <input type="text" id="fjktotal_dx" max="fjktotal_dx" readonly/>
+            </div>
         </form>
+        <div class="mui-btn-row" id="SaveD">
+            <button class="mui-btn mui-btn-primary" type="button" id="commitbt" onclick="Save()">提交</button>
+        </div> 
     </div>
+    <!--<script type="text/javascript" src="../../../../Scripts/vconsole.min.js"></script>-->
+    <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.js"></script>
+    <!--<script src="http://yun.kingdee.com/res/js/qingjs.js"></script>-->
+    <script type="text/javascript" src="http://wb.weigaoholding.com:8090/res/js/qingjs.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.poppicker.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.picker.min.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.indexedlist.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/ApprovalUtils.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/util.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/upload.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/upload.detail.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/common.js"></script>
+    <script type="text/javascript" src="common.js"></script>
+    <script>
+
+        // var vConsole = new VConsole();
+
+        mui.init();
+
+        mui.ready(function () {
+            getVersion('\\01威高集团总部\\04威海卫大厦\\03_财务管理', '威海卫大厦借款申请');
+            getBPMParam();
+
+            _init._preCreate();
+        });
+    </script>
 </body>
 </html>
