--- a/BPMMobile/Pages/index.html
+++ b/BPMMobile/Pages/index.html
@@ -267,7 +267,7 @@
                                  li = li + '          <img class="mui-media-object mui-pull-left" src="' + data[i].Icon + '">';
                                  li = li + '          <div class="mui-media-body"> ';
                                  li = li + '                ' + data[i].DisplayName + '';
-                                 li = li + '                <p class="mui-ellipsis">' + data[i].Description + '</p> ';
+                                 li = li + '                <p class="mui-ellipsis" style="font-size:0.6rem;">' + data[i].Description + '</p> ';
                                  li = li + '           </div> ';
                                  li = li + '          </a> ';
                                  li = li + '   </li> ';
