--- a/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/JJ0103001/FlowUndoDetail.html
+++ b/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/JJ0103001/FlowUndoDetail.html
@@ -75,11 +75,11 @@
                     <input type="date" id="fecpgsj" name="fecpgsj" readonly />
                 </div>
                 <div class="mui-input-row">
-                    <label for="fgzdl">故障大类</label>
+                    <label for="fgzdl">故障大类<i style="color:red;">*</i></label>
                     <input type="text" id="fgzdl" name="fgzdl" readonly />
                 </div>
                 <div class="mui-input-row">
-                    <label for="fgzxl">故障小类</label>
+                    <label for="fgzxl">故障小类<i style="color:red;">*</i></label>
                     <input type="text" id="fgzxl" name="fgzxl" readonly />
                 </div>
                 <div class="mui-input-row">
@@ -88,7 +88,7 @@
                 </div>
                 <div class="mui-input-row">
                     <label for="fqthf">其他耗费</label>
-                    <input type="number" id="fqthf" name="fqthf" readonly />
+                    <input type="text" id="fqthf" name="fqthf" readonly />
                 </div>
                 <div id="mxlist">
 
@@ -103,19 +103,20 @@
                 <div class="mui-card">
                     <div class="mui-input-row itemtitle2">
                         <label>维修评价<i style="color:red;">*</i></label>
+                        <input type="hidden" id="fwxpj" name="fwxpj" readonly />
                     </div>
-                    <div class="mui-input-group">
+                    <div class="mui-input-group radio-group">
                         <div class="mui-input-row mui-radio">
                             <label>满意</label>
-                            <input type="radio" id="fwxpj" name="fwxpj" disabled />
+                            <input type="radio" id="fwxpjc" name="fwxpjc" disabled />
                         </div>
                         <div class="mui-input-row mui-radio">
                             <label>一般</label>
-                            <input type="radio" id="fwxpj" name="fwxpj" disabled />
+                            <input type="radio" id="fwxpjc" name="fwxpjc" disabled />
                         </div>
                         <div class="mui-input-row mui-radio">
                             <label>不满意</label>
-                            <input type="radio" id="fwxpj" name="fwxpj" disabled />
+                            <input type="radio" id="fwxpjc" name="fwxpjc" disabled />
                         </div>
                     </div>
                     <div class="mui-input-row">
