--- a/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/RL0103001/FlowCreate.html
+++ b/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/RL0103001/FlowCreate.html
@@ -62,7 +62,7 @@
         mui.init();
 
         mui.ready(function () {
-            getVersion('\\01威高集团总部\\04威海卫大厦\\08_基建工程', '威海卫大厦员工转正申请');
+            getVersion('\\01威高集团总部\\04威海卫大厦\\10_人力资源', '威海卫大厦员工转正申请');
             getBPMParam();
 
             _init._preCreate();
