--- a/BPMMobile/Pages/SpeciallyExpense/FlowCreate.html
+++ b/BPMMobile/Pages/SpeciallyExpense/FlowCreate.html
@@ -691,7 +691,7 @@
                             xml = xml + '     <XForm>';
                             xml = xml + '          <Header>';
                             xml = xml + '             <Method>Post</Method>';
-                            xml = xml + '              <ProcessName>制品公司费用标准特批</ProcessName>';
+                            xml = xml + '              <ProcessName>医用制品公司市场特批费用标准申请</ProcessName>';
                             xml = xml + '                <ProcessVersion>' + version + '</ProcessVersion>';
                             xml = xml + '             <DraftGuid></DraftGuid>';
                             xml = xml + '              <OwnerMemberFullName>' + BPMOU + '</OwnerMemberFullName>';
