--- a/BPMMobile/Pages/02YiYongZhiPin/08YiYongCaiLiao/SCYX0208002/FlowAskDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/08YiYongCaiLiao/SCYX0208002/FlowAskDetail.html
@@ -99,7 +99,7 @@
     <script type="text/javascript" src="../../../../Scripts/util.js"></script>
     <script type="text/javascript" src="../../../../Scripts/upload.js"></script>
     <script type="text/javascript" src="../../../../Scripts/upload.detail.js"></script>
-    <script type="text/javascript" src="../../../../Scripts/common.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/common.js?version=1.0"></script>
     <script type="text/javascript" src="common.js"></script>
     <script>
 
