--- a/BPMMobile/Pages/02YiYongZhiPin/08YiYongCaiLiao/SCYX0208003/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/08YiYongCaiLiao/SCYX0208003/FlowCreate.html
@@ -91,6 +91,7 @@
             <button class="mui-btn mui-btn-primary" type="button" id="commitbt" onclick="Save()">提交</button>
         </div>
     </div>
+    <!--<script type="text/javascript" src="../../../../Scripts/vconsole.min.js"></script>-->
     <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
     <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
     <script type="text/javascript" src="../../../../Scripts/mui.js"></script>
@@ -103,9 +104,10 @@
     <script type="text/javascript" src="../../../../Scripts/util.js"></script>
     <script type="text/javascript" src="../../../../Scripts/upload.js"></script>
     <script type="text/javascript" src="../../../../Scripts/upload.detail.js"></script>
-    <script type="text/javascript" src="../../../../Scripts/common.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/common.js?version=1.0"></script>
     <script type="text/javascript" src="common.js"></script>
     <script>
+        //var vconsole = new VConsole();
 
         mui.init();
 
