--- a/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/CG0103001/FlowCreate.html
+++ b/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/CG0103001/FlowCreate.html
@@ -59,7 +59,7 @@
             <div id="mxlist">
 
             </div>
-            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx_wz" style="margin-top:0.5rem;">
+            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;">
                 添加采购申请明细
                 <span class="mui-icon mui-icon-plusempty"></span>
             </a>
@@ -110,7 +110,7 @@
         mui.init();
 
         mui.ready(function () {
-            getVersion('\\01威高集团总部\\04威海卫大厦\\02_采购管理', '威海卫大厦采购申请');
+            getVersion('\\01威高集团总部\\04威海卫大厦\\02_采购管理', '威海卫大厦物资采购申请');
             getBPMParam();
             _init._preCreate();
 
