--- a/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowCreate.html
+++ b/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowCreate.html
@@ -539,6 +539,49 @@
                         <span class="mui-icon mui-icon-plusempty"></span>
                     </a>
                     <div id="mxlist_fp"></div>
+                      <div id="menu-wrapper2" class="menu-wrapper hidden">
+                        <div id="menu2" class="menu">
+                           <div class="mui-card">
+                               <div class="mui-input-row">
+                                   <label>物料名称<i style="color:red;">*</i></label>
+                                   <input type="text" id="ffp_wlmc_menu" name="ffp_wlmc_menu" readonly />
+                               </div>
+                               <div class="mui-input-row">
+                                   <label>规格型号</label>
+                                   <input type="text" id="ffp_ggxh_menu" name="ffp_ggxh_menu" readonly/>
+                               </div>
+                               <div class="mui-input-row">
+                                   <label>单位</label>
+                                   <input type="text" id="ffp_dw_menu" name="ffp_dw_menu" readonly />
+                               </div>
+                               <div class="mui-input-row">
+                                   <label>包装形式<i style="color:red;">*</i></label>
+                                   <input type="text" id="ffp_bzxs_menu" name="ffp_bzxs_menu" readonly placeholder="请选择包装形式"/>
+                               </div>
+                               <div class="mui-input-row">
+                                   <label>含税单价</label>
+                                   <input type="number" id="ffp_dj_menu" name="ffp_dj_menu" placeholder="请填写含税单价"/>
+                               </div>
+                               <div class="mui-input-row">
+                                   <label>数量</label>
+                                   <input type="number" id="ffp_sl_menu" name="ffp_sl_menu" placeholder="请填写数量"/>
+                               </div>
+                               <div class="mui-input-row">
+                                   <label>含税金额</label>
+                                   <input type="number" id="ffp_je_menu" name="ffp_je" readonly value="0.000000"/>
+                               </div>
+                               <div class="mui-row">
+                                   <button type="button" class="mui-btn mui-btn-primary mui-col-xs-6" id="confirm_menu_2">
+                                       确定
+                                   </button>
+                                   <button type="button" class="mui-btn mui-btn-danger  mui-col-xs-6" id="cancel_menu_2">
+                                       取消
+                                   </button>
+                               </div>
+                           </div>
+
+                        </div>
+                      </div>
                 </div>
                 <div id="item4" class="mui-control-content">
                     <div class="mui-input-row itemtitle2">
