--- a/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowCreate.html
+++ b/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowCreate.html
@@ -378,7 +378,7 @@
                         </div>
                         <div class="mui-input-row">
                             <label for="fsh_dz">收货地址<i style="color:red;">*</i></label>
-                            <input type="text" id="fsh_dz" name="fsh_dz" readonly placeholder="自动带出" />
+                            <input type="text" id="fsh_dz" name="fsh_dz"  placeholder="自动带出" />
                         </div>
                         <div class="mui-input-row">
                             <label for="fsh_name">收货人<i style="color:red;">*</i></label>
@@ -544,7 +544,7 @@
                            <div class="mui-card">
                                <div class="mui-input-row">
                                    <label>物料名称<i style="color:red;">*</i></label>
-                                   <input type="text" id="ffp_wlmc_menu" name="ffp_wlmc_menu" readonly />
+                                   <input type="text" id="ffp_wlmc_menu" name="ffp_wlmc_menu" readonly placeholder="请选择物料"/>
                                </div>
                                <div class="mui-input-row">
                                    <label>规格型号</label>
