--- a/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/SCYX0103002/FlowCreate.html
+++ b/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/SCYX0103002/FlowCreate.html
@@ -31,11 +31,11 @@
                 <input type="date" id="fdate" name="fdate" />
             </div>
             <div class="mui-input-row">
-                <label for="fxsnd">销售年度</label>
+                <label for="fxsnd">销售年度<i style="color:red;">*</i></label>
                 <input type="text" id="fxsnd" name="fxsnd" readonly placeholder="请选择销售年度"/>
             </div>
             <div class="mui-input-row">
-                <label for="fxsyd">销售月度</label>
+                <label for="fxsyd">销售月度<i style="color:red;">*</i></label>
                 <input type="text" id="fxsyd" name="fxsyd" readonly placeholder="请选择销售月度"/>
             </div>
             <div class="mui-input-row">
