--- a/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/CW0103006/FlowCreate.html
+++ b/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/CW0103006/FlowCreate.html
@@ -72,7 +72,7 @@
                         <label class="label">部门分析意见<i style="color:red;">*</i></label>
                         <span class="tips" id="imageCount"><!--已添加0张--></span>
                         <!--上传图片按钮  -->
-                        <span class="upload-addbtn">
+                        <span class="upload-addbtn" style="display:none;">
                             <input type="file" accept="image/jpeg,image/jpg,image/png,image/jp2,image/bmp" id="file" style="opacity:0;">
                         </span>
 
