--- a/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowCreate.html
+++ b/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowCreate.html
@@ -656,8 +656,8 @@
     <script type="text/javascript" src="../../../../Scripts/util.js"></script>
     <script type="text/javascript" src="../../../../Scripts/upload.js"></script>
     <script type="text/javascript" src="../../../../Scripts/upload.detail.js"></script>
-    <script type="text/javascript" src="../../../../Scripts/common.js"></script>
-    <script type="text/javascript" src="common.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/common.js?id=123456"></script>
+    <script type="text/javascript" src="common.js?id=123456"></script>
     <script>
          mui.init();
 
