调整后台，添加保存更新范本功能，调整表单结构

--- a/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowCreate.html
+++ b/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowCreate.html
@@ -367,8 +367,11 @@
                         <input type="text" id="fkhmc" name="fkhmc" readonly placeholder="请选择客户" data-fkhbm="" data-fkzcc="" />
                     </div>
                     <div class="mui-btn-row" id="SaveD">
-                        <button class="mui-btn mui-btn-primary" type="button" id="commitbt" onclick="Save()">提交</button>
+                        <button class="mui-btn mui-btn-primary" type="button" id="commitbt" style="width:45%;"  onclick="Save()">提交</button>   
+                        <button class="mui-btn mui-btn-green" type="button" id="commitbt" style="width:45%;" onclick="SaveAsDraft()">保存范本</button>   
                     </div>
+                     
+
                 </div>
                 <div id="item2" class="mui-control-content">
                     <div class="">
