--- a/BPMMobile/Pages/01WeGoHQ/02LvYouCanYin/CW0102001/FlowCreate.html
+++ b/BPMMobile/Pages/01WeGoHQ/02LvYouCanYin/CW0102001/FlowCreate.html
@@ -32,7 +32,7 @@
             </div>
             <div class="mui-input-row">
                 <label>联系方式</label>
-                <input type="tel" id="ftel" readonly/>
+                <input type="tel" id="ftel" placeholder="请填写联系方式"/>
             </div>
             <div class="mui-row cutOffLine" style="padding-left:.8rem;">
                 <div class="mui-col-xs-3" style="display:flex;">
@@ -49,7 +49,7 @@
                 </div>
                 <div class="mui-col-xs-3 " style="display:flex;">
                     <label>大写金额</label>
-                    <input type="text" id="fdxje" readonly/>
+                    <textarea id="fdxje" rows="2" readonly></textarea>
                 </div>
             </div>
             <div class="mui-input-row" style="height:auto;">
