--- a/BPMMobile/Pages/06ShengWuKeJi/01KuaZiGongSi/ZLGL0601001/FlowDoneDetail.html
+++ b/BPMMobile/Pages/06ShengWuKeJi/01KuaZiGongSi/ZLGL0601001/FlowDoneDetail.html
@@ -145,7 +145,7 @@
                         <label class="label">附件</label>
                         <span class="tips" id="imageCount"><!--已添加0张--></span>
                         <!--上传图片按钮  -->
-                        <span class="upload-addbtn">
+                        <span class="upload-addbtn" id="addbtn_fj">
                             <input type="file" accept="image/jpeg,image/jpg,image/png,image/jp2,image/bmp" id="file" style="opacity:0;">
                         </span>
                     </div>
