--- a/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/BG0103002/FlowUndoDetail.html
+++ b/BPMMobile/Pages/01WeGoHQ/03WeiHaiWeiDaSha/BG0103002/FlowUndoDetail.html
@@ -30,20 +30,21 @@
                 <input type="text" id="fdept" name="fdept" readonly />
             </div>
             <div class="mui-row" style="padding-left:.8rem;">
-                <div class="mui-col-xs-4 flexLine">
+                <div class="mui-col-xs-6 flexLine">
                     <label>编号<i style="color:red;">*</i></label>
                     <textarea rows="2" id="fbh" name="fbh" readonly></textarea>
                 </div>
-                <div class="mui-col-xs-4 flexLine">
+                <div class="mui-col-xs-6 flexLine">
                     <label>标题<i style="color:red;">*</i></label>
                     <textarea rows="2" id="fbt" name="fbt" readonly></textarea>
                 </div>
-                <div class="mui-col-xs-4 flexLine" style="height:3.1rem;">
-                    <label>是否有效</label>
-                    <input type="hidden" id="fifys" name="fifys"  />
-                    <div class="mui-switch mui-switch-blue mui-switch-mini mui-disabled" style="margin:1rem;" id="fifys_switch">
-                        <div class="mui-switch-handle"></div>
-                    </div>
+                
+            </div>
+            <div class="mui-input-row" style="height:auto;">
+                <label>是否有效</label>
+                <input type="hidden" id="fifys" name="fifys" />
+                <div class="mui-switch mui-switch-blue mui-switch-mini mui-disabled" style="margin:1rem;" id="fifys_switch">
+                    <div class="mui-switch-handle"></div>
                 </div>
             </div>
             <div class="mui-input-row" style="height:7rem;overflow:scroll;" id="uploaddiv">
