--- a/BPMMobile/Pages/DoneFlow.html
+++ b/BPMMobile/Pages/DoneFlow.html
@@ -229,7 +229,10 @@
                                            <h4 class="mui-ellipsis-2" style="font-size:0.7rem;font-weight:500;padding-left:0.5rem;">
                                                ${data.tasks[i].DisplayName}<p class="mui-pull-right" style="color:#00a0ea;">${stepName}</p>
                                            </h4>
-                                           <p class="mui-pull-right">${FormatterTime(data.tasks[i].CreateAt)}</p>
+                                           <h4 class="mui-ellipsis-2" style="font-size:0.6rem;;font-weight:500;padding-left:0.5rem;">
+                                                  ${localeLan(data.tasks[i].Description)}
+                                                <p class="mui-pull-right">${FormatterTime(data.tasks[i].CreateAt)}</p>
+                                            </h4>  
                                       </div>   
                                   </div>  
                                </li>
@@ -262,7 +265,7 @@
             .fail(function (XMLHttpRequest, textStatus, errorThrown) {
 
                 if (XMLHttpRequest.status == "401") {
-                    mui.alert('授权过期，请重新打开页面');;
+                    mui.alert('授权过期，请重新打开页面');
                 } else if (XMLHttpRequest.status == "500") {
                     mui.alert('服务器内部错误');
                 }
