--- a/BPMMobile/Pages/DoneFlow.html
+++ b/BPMMobile/Pages/DoneFlow.html
@@ -141,7 +141,7 @@
         function refresh() {
             localStorage.setItem('startRowIndexDone', 0);  //重置startRowIndex
             window.location.reload();           
-            mui('#refreshContainer').pullRefresh().endPulldown();
+            mui('#wrapper').pullRefresh().endPulldown();
         }
         //跳转到对应页面
         function toggleJUMP(context) {
