--- a/BPMMobile/Pages/AskFlow.html
+++ b/BPMMobile/Pages/AskFlow.html
@@ -142,7 +142,7 @@
         function refresh() {
             localStorage.setItem('startRowIndexAsk', 0);  //重置startRowIndex
             window.location.reload();           
-            mui('#refreshContainer').pullRefresh().endPulldown();
+            mui('#wrapper').pullRefresh().endPulldown();
         }
         //跳转到对应页面
         function toggleJUMP(context) {
