--- a/BPMMobile/Pages/00KCY/HQ000709/FlowCreate.html
+++ b/BPMMobile/Pages/00KCY/HQ000709/FlowCreate.html
@@ -42,7 +42,7 @@
                 <label>付款方式<i style="color:red;">*</i></label>
                 <input type="text" id="ffkfs" readonly placeholder="请选择付款方式"/>
             </div>
-            <div class="mui-row">
+            <div class="mui-row" style="padding-left:1vw;">
                 <div class="mui-col-xs-4" style="display:flex;">
                     <label>合计人数</label>
                     <input type="number" id="fhj_ccrs" readonly value="0"/>
@@ -51,7 +51,7 @@
                     <label>合计数量</label>
                     <input type="number" id="fhj_ycsl" readonly value="0"/>
                 </div>
-                <div class="mui-input-row">
+                <div class="mui-col-xs-4"  style="display:flex;">
                     <label>合计金额</label>
                     <input type="number" id="fhjje" readonly value="0"/>
                 </div>
@@ -68,6 +68,7 @@
             <button class="mui-btn mui-btn-primary" type="button" id="commitbt" onclick="Save()">提交</button>
         </div>
     </div>
+    <!--<script type="text/javascript" src="../../../Scripts/vconsole.min.js"></script>-->
     <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
     <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
     <script type="text/javascript" src="../../../../Scripts/mui.js"></script>
