--- a/BPMMobile/Pages/00KCY/HQ000705/FlowCreate.html
+++ b/BPMMobile/Pages/00KCY/HQ000705/FlowCreate.html
@@ -39,12 +39,33 @@
                 <input type="text" id="fssjt" readonly/>
             </div>
             <div class="mui-input-row">
-                <label>所属分公司</label>
+                <label>所属公司</label>
                 <input type="text" id="fssgs" readonly/>
             </div>
             <div class="mui-input-row">
+                <label>所属分公司 </label>
+                <input type="text" id="ffgs" readonly placeholder="请选择所属分公司"/>
+            </div>
+            <div class="mui-input-row">
                 <label>就餐食堂<i style="color:red;">*</i></label>
-                <input type="text" id="ffgs" readonly placeholder="请选择就餐食堂"/>
+                <input type="text" id="fjc_st" readonly placeholder="请选择就餐食堂"/>
+            </div>
+            <div class="mui-row" style="padding:2.5vw;">
+                <div class="mui-col-xs-3">
+                    <label>合计</label>
+                </div>
+                <div class="mui-col-xs-3">
+                    <label>就餐人数</label>
+                    <input type="number" id="fhj_rs" readonly value="0"/>
+                </div>
+                <div class="mui-col-xs-3">
+                    <label>实际人数</label>
+                    <input type="number" id="fhj_sjcrs" readonly value="0"/>
+                </div>
+                <div class="mui-col-xs-3">
+                    <label>金额</label>
+                    <input type="number" id="fhj_je" readonly value="0"/>
+                </div>
             </div>
             <div id="mxlist">
 
