--- a/BPMMobile/Pages/00KCY/HQ000709/FlowAskDetail.html
+++ b/BPMMobile/Pages/00KCY/HQ000709/FlowAskDetail.html
@@ -41,7 +41,7 @@
                 <label>付款方式<i style="color:red;">*</i></label>
                 <input type="text" id="ffkfs" readonly />
             </div>
-            <div class="mui-row">
+            <div class="mui-row" style="padding:2vw;">
                 <div class="mui-col-xs-4" style="display:flex;">
                     <label>合计人数</label>
                     <input type="number" id="fhj_ccrs" readonly />
@@ -50,7 +50,7 @@
                     <label>合计数量</label>
                     <input type="number" id="fhj_ycsl" readonly />
                 </div>
-                <div class="mui-input-row">
+                <div class="mui-col-xs-4" style="display:flex;">
                     <label>合计金额</label>
                     <input type="number" id="fhjje" readonly />
                 </div>
