--- a/BPMMobile/Pages/00KCY/HQ000706/FlowAskDetail.html
+++ b/BPMMobile/Pages/00KCY/HQ000706/FlowAskDetail.html
@@ -69,7 +69,7 @@
             <div id="mxlist">
 
             </div>
-            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;">
+            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;display:none;">
                 汇总明细表
                 <span class="mui-icon mui-icon-plusempty"></span>
             </a> 
